--- a/frontend/src/app/components/user-form/user-form.component.html
+++ b/frontend/src/app/components/user-form/user-form.component.html
@@ -1,18 +1,44 @@
 <div class="form-overlay">
   <div class="user-form-container">
     <h3>Add User</h3>
-    <form (ngSubmit)="save()">
-      <label>Username:</label>
-      <input [(ngModel)]="user.username" name="username" required>
+    <form [formGroup]="userForm" (ngSubmit)="save()">
+      <div>
+        <label>Username:</label>
+        <input 
+          formControlName="username" 
+          [class.error]="username?.invalid && username?.touched">
+        <div *ngIf="username?.invalid && username?.touched" class="error-message">
+          <small *ngIf="username?.errors?.['required']">Le nom d'utilisateur est requis</small>
+          <small *ngIf="username?.errors?.['minlength']">Le nom d'utilisateur doit contenir au moins 3 caractères</small>
+        </div>
+      </div>
 
-      <label>Email:</label>
-      <input [(ngModel)]="user.email" name="email" type="email" required>
+      <div>
+        <label>Email:</label>
+        <input 
+          formControlName="email" 
+          type="email"
+          [class.error]="email?.invalid && email?.touched">
+        <div *ngIf="email?.invalid && email?.touched" class="error-message">
+          <small *ngIf="email?.errors?.['required']">L'email est requis</small>
+          <small *ngIf="email?.errors?.['email']">Format d'email invalide</small>
+        </div>
+      </div>
 
-      <label>Password:</label>
-      <input [(ngModel)]="user.password" name="password" type="password" required>
+      <div>
+        <label>Password:</label>
+        <input 
+          formControlName="password" 
+          type="password"
+          [class.error]="password?.invalid && password?.touched">
+        <div *ngIf="password?.invalid && password?.touched" class="error-message">
+          <small *ngIf="password?.errors?.['required']">Le mot de passe est requis</small>
+          <small *ngIf="password?.errors?.['minlength']">Le mot de passe doit contenir au moins 6 caractères</small>
+        </div>
+      </div>
 
       <div class="buttons">
-        <button type="submit">Create</button>
+        <button type="submit" [disabled]="userForm.invalid">Create</button>
         <button type="button" (click)="close()">Cancel</button>
       </div>
     </form>
